# sandbox-mcp

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.zh.md  config.example.toml  docker-compose.yml  pyproject.toml  sandbox_env.py  server.json  server.py  shell_registry.py  shell_session.py  target_registry.py
.github/workflows/: test.yml
backends/: base.py  docker_backend.py  ssh_backend.py
config/: config.example.toml
docker/: sandbox-dev.Dockerfile  sandbox-dev.cn.Dockerfile
docs/: design-spec-v2.md  design-spec.md  implementation-plan.md
docs/superpowers/plans/: 2026-07-13-audit-query-tool.md  2026-07-16-docker-introspection-tools.md  2026-07-18-shell-restart-notification.md  2026-07-19-flatten-discovery.md
docs/superpowers/specs/: 2026-07-13-audit-query-tool-design.md  2026-07-16-docker-introspection-tools-design.md  2026-07-18-shell-restart-notification-design.md
scripts/: ci.sh
src/sandbox_mcp/: __init__.py  audit.py  auth.py  config.py  file_operations.py  safety.py  sandbox_env.py  server.py  shell_registry.py  shell_session.py  target_registry.py
src/sandbox_mcp/backends/: __init__.py  base.py  docker_backend.py  ssh_backend.py
src/sandbox_mcp/data/: config.example.toml
tests/: conftest.py  test_audit.py  test_audit_query.py  test_auth.py  test_backends_base.py  test_config.py  test_docker_backend.py  test_file_operations.py  test_http_transport.py  test_integration_docker.py  test_lint.py  test_safety.py  test_sandbox_env.py  test_server.py  test_server_cli.py  test_shell_registry.py  test_shell_session.py  test_ssh_backend.py  test_target_registry.py
