[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sandbox-mcp"
version = "0.2.0"
description = "Sandbox Environment Manager MCP server"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Sandbox MCP Contributors"}]
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]
http = [
    "uvicorn>=0.27.0",
    "starlette>=0.36.0",
]

[project.scripts]
sandbox-mcp = "sandbox_mcp.server:main"
sandbox-mcp-http = "sandbox_mcp.server:main_http"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "integration: requires Docker daemon to run",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true