[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sandbox-mcp"
version = "0.2.0"
description = "Sandbox Environment Manager MCP server"
requires-python = ">=3.12"
license = {text = "AGPL-3.0-only"}
authors = [{name = "Sandbox MCP Contributors"}]
dependencies = [
    "docker>=7.0.0",
    "mcp>=1.0.0",
    "starlette>=0.36.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]

[project.scripts]
sandbox-mcp = "sandbox_mcp.server:main"
sandbox-mcp-http = "sandbox_mcp.server:main_http"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"sandbox_mcp" = ["data/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -m 'not integration'"
markers = [
    "integration: requires a running Docker daemon; run with `pytest -m integration`",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/sandbox_mcp/backends/docker_backend.py" = ["SIM115"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = true
disable_error_code = ["annotation-unchecked"]